Changelog of flooding-base
==========================


1.33 (unreleased)
-----------------

- Nothing changed yet.


1.32 (2012-10-19)
-----------------

Add Javascript that can open a specific project/scenario upon loading
the homepage.

Get the information about which scenario to open from the session (it
is set in a view in flooding-lib).

Some cleanup in Javascript.


1.31 (2012-09-21)
-----------------

Changed Javascript, now showing an (I) icon link after some breaches
(only works with new services.py from flooding-lib).


1.30 (2012-08-16)
-----------------

Increased length of slug field of Text model, 20 was too short.


1.29 (2012-07-31)
-----------------

Fixed bug with showing result animations; didn't change rootUrl to
flooding_config.root_url in some places.


1.28 (2012-07-26)
-----------------

Refactor Text.get() so that it works nicely with templates (it always
returns SafeString instances so they aren't escaped anymore in the
template) and gives a helpful reminder text where they are used in the
template while there is no text entered in the admin yet.


1.27 (2012-07-19)
-----------------

Cleaned up index.html. Made header background image work and uses the
current logo now. Moved most of the Javascript that used to be in
index.html into separate files.

Removed a lot of the Application/Subapplication code as this isn't
Lizard anymore, it is now purely Flooding and it doesn't need to be as
dynamic anymore.

Removed much of the code for FEWS, NHI, etc.


1.26 (2012-07-09)
-----------------

- Removed static/examples files, moved them to the flooding site. This
  makes it slightly easier to update them.


1.25 (2012-06-14)
-----------------

- New versions of the group import example Excel files.


1.24 (2012-06-12)
-----------------

- Add 'Text' model to store bits of text that need to be shown on the site.


1.23 (2012-06-12)
-----------------

- Nothing changed yet.


1.22.3 (2012-06-08)
-------------------

- Nothing changed yet.

