@@ -124,5 +124,23 @@
 
    <!-- Javascript for the screen Framework -->
    <script type="text/javascript" src="{{ STATIC_URL }}scripts/flooding/screen_framework.js"> </script>
+
+{% comment %}
+Joep wil de Flooding site tracken. --Remco 20121120
+{% endcomment %}
+<script type="text/javascript">
+  var _gauges = _gauges || [];
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id', '50ab557f613f5d2c0d00001e');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
+  })();
+</script>
+
  </body>
 </html>
